# StockAdvisor

./: .env.example.py  .gitignore  README.md  pyproject.toml  pytest.ini
docs/: CHANGELOG.md  ERROR_HANDLING_IMPROVEMENTS.md  RECOMMENDED_IMPROVEMENTS.md
src/: analysis_engine.py  config.py  main.py  prompts.py  recommendation_agent.py  recommendation_bot.py  report_generator.py  risk_assessment.py  stock_adv_agent.py  stock_adv_analysis_engine.py  stock_adv_analysis_instructions.py  stock_adv_data_fetcher.py  stock_adv_data_fetcher_tool.py  stock_adv_data_fetcher_utils.py  stock_adv_market_sentiment.py  stock_adv_prompts.py  stock_adv_recommendation_agent.py  stock_adv_report_generator.py  stock_adv_report_instructions.py  stock_adv_reviewer_agent.py  stock_adv_risk_assesment_tool.py  stock_adv_risk_assessment.py  stock_adv_risk_instructions.py  stock_adv_risk_prompts.py  stock_adv_security.py  stock_adv_user_interface.py  stock_adv_utils.py  stock_adv_web_scraping.py  stock_adv_web_search.py  stock_adv_web_search_tool.py  user_interface.py
src/agents/: stock_adv_agent.py  stock_adv_analysis_engine.py  stock_adv_market_sentiment.py  stock_adv_recommendation_agent.py  stock_adv_report_generator.py  stock_adv_risk_assessment.py
src/config/: config.py  stock_adv_market_sent_analysis_instructions.py  stock_adv_report_instructions.py  stock_adv_risk_instructions.py
src/tools/: stock_adv_data_fetcher_tool.py  stock_adv_web_search_tool.py
src/ui/: progression_bar.py  (+2 more)
tests/: __init__.py  conftest.py  test_agents.py  test_security.py  test_user_interface.py
(+1 files in other folders)
