[project]
name = "stockadvisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "streamlit",
   "langchain_ollama",
   "langchain_experimental",
   "langgraph",
   "langchain-community",
   "ollama",
   "mcp[cli]>=1.14.0",
   "httpx>=0.28.1",
   "langchain_mcp_tools",
   "langchain-community",
   "websockets",
   "ddgs",
   "beeai_framework",
   "bs4",
   "beeai-framework[wikipedia]",
   "yfinance",
   "pytest",
   "duckduckgo-search >=2.0",
   "streamlit.testing.script_interactions"
]
